# toooooooooools

./: .gitignore  append_bag.py  append_chassis_odom_to_mutil_bag.bash  cut_merge.py  filter_area_bag.py  filter_bag.py  find_point.py  merge_bag.py  navnet_date_process.20190715.nolidarparsing.sh  open_html_and_screenshot.py  put_bag_back.py  split_bag.py  time_range.py  topic_change_rewrite.py
compare_camera_and_lidar_pointcloud/src/cmp_cam_lidar_pd/: CMakeLists.txt  package.xml
compare_camera_and_lidar_pointcloud/src/cmp_cam_lidar_pd/include/cmp_cam_lidar_pd/: cmp_cam_lidar_pd.h  point_type.h  point_type.temp.h
compare_camera_and_lidar_pointcloud/src/cmp_cam_lidar_pd/include/cmp_cam_lidar_pd/impl/: cmp_cam_lidar_pd.hpp
compare_camera_and_lidar_pointcloud/src/cmp_cam_lidar_pd/src/: cmp_cam_lidar_pd.cc  test.cc
compare_icp_and_ndt/: package.xml  plot_1_vector.py  plot_2_vector.py  plot_3_vector.py  plot_4_vector.py
compare_icp_and_ndt/include/compare_icp_and_ndt/: compare_icp_and_ndt.h
compare_icp_and_ndt/src/: compare_icp_and_ndt.cc
compare_icp_and_ndt/src/compare_icp_and_ndt/: CMakeLists.txt
compare_icp_and_ndt/src/compare_icp_and_ndt/include/compare_icp_and_ndt/: compare_icp_and_ndt.h  correspondence_estimation_with_label.h
compare_icp_and_ndt/src/compare_icp_and_ndt/src/: compare_icp_and_ndt.backup.cc  compare_icp_and_ndt.cc
compare_icp_and_ndt/src/ndt_gpu/: CMakeLists.txt
compare_tf_and_eigen/src/compare_tf_and_eigen/: CMakeLists.txt  compare_tf_and_eigen.cc  package.xml
convert_bag_to_ascii_pcd/src/convert_bag_to_ascii_pcd/: CMakeLists.txt  package.xml
convert_bag_to_ascii_pcd/src/convert_bag_to_ascii_pcd/src/: convert_bag_to_ascii_pcd.cc
convert_kitti_lidar_data_to_rosbag/: log  run.sh
convert_kitti_lidar_data_to_rosbag/src/convert_kitti_lidar_data_to_rosbag/: CMakeLists.txt  main.cc  package.xml
convert_kitti_pose_to_xyzrpy/: log  run.sh
convert_kitti_pose_to_xyzrpy/src/convert_kitti_pose_to_xyzrpy/: 2  CMakeLists.txt  main.cc  package.xml
convert_loam_pose_to_kitti_camera_pose/: run.sh
convert_loam_pose_to_kitti_camera_pose/src/convert_loam_pose_to_kitti_camera_pose/: CMakeLists.txt  main.cc  package.xml
convert_pointcloud_to_pcd/: log
convert_pointcloud_to_pcd/src/convert_pointcloud_to_pcd/: CMakeLists.txt  package.xml
convert_pointcloud_to_pcd/src/convert_pointcloud_to_pcd/src/: convert_pointcloud_to_pcd.cc
lidar_mapper/src/lidar_mapper/: CMakeLists.txt  lidar_mapper.cpp  mapper_config.yaml
lidar_match/src/: CMakeLists.txt  lidar_match.cc  package.xml
merge_pointcloud/: log
merge_pointcloud/src/merge_pointcloud/: CMakeLists.txt  package.xml
merge_pointcloud/src/merge_pointcloud/src/: merge_pointcloud.cc
pcltool/: CMakeLists.txt  merge_ply.cc  pcd2asc.cpp  pcd2ply.cpp  ply2pcd.cpp  transform_pcd.cpp
plot_pasring_result/: config.template.yaml  pandora_param.yaml
plot_pasring_result/src/plot_image_pasring_results/: CMakeLists.txt  package.xml  plot_image_pasring_results.cc  plot_image_pasring_results_no_pandora.cc
pose_correct/: log
pose_correct/src/read_bag_odom/: package.xml  setup.py
pose_correct/src/read_bag_odom/include/read_gnss/: read_gnss.h
pose_correct/src/read_bag_odom/script/: draw.py  filter_area_bag.py  plot_pitch.py  read_bag_plot_in_google_map.py
pose_correct/src/read_bag_odom/script/plotpy/: plot_1_scatter_3d.py  plot_2_vector_based_on_cov.py  plot_frame.py  plot_ndt_cpu_gpu.py
pose_correct/src/read_bag_odom/src/: driver.cc  pose_correct.cc
pose_correct/src/read_bag_tf/: package.xml
python_plot/: plot_1_scatter_2d.py  plot_1_vector.VO.py  plot_1_vector.py  plot_1_vector_3d.py  plot_1_vector_gnss.py  plot_2_vector.py  plot_GNSS.py  plot_GNSS_2d.py  plot_XY.py  plot_icp_ndt_loam.py
read_data_from_bag/: README.md  raw_odom.txt  run_mutil_bag.bash
read_data_from_bag/src/read_bag_odom/: CMakeLists.txt  package.xml
read_data_from_bag/src/read_bag_odom/script/: bin_plot.py  compare_odoms.py  find_point.py  kdfind.py  maptest.py  plot_2_scatter.py  read_bag_plot_in_google_map.py  read_data_from_bag_and_plot_in_google_map.py  read_odom_and_compare.py  split_bag.py  transform_WGS84_GCJ02.py  util.py
read_data_from_bag/src/read_bag_odom/script/plotpy/: plot_1_vector.py  plot_1_vector_3d.py  plot_2_vector.pose_opt.py  plot_2_vector.py  plot_GNSS_2d.py  plot_GNSS_3d.py  plot_XY.loam.py
read_data_from_bag/src/read_bag_odom/src/: read_bag_odom.cc
read_data_from_bag/src/read_bag_tf/: CMakeLists.txt
read_gnss/: chongqing2_gnss_odom_.no_nan.txt  chongqing2_gnss_odom_.txt  chuangxingang1.txt  plot_1_vector.py  plot_1_vector_3d.py  shunyi_0420.txt
read_gnss/src/: CMakeLists.txt  package.xml
read_gnss/src/include/read_gnss/: read_gnss.h
read_gnss/src/read_gnss/: CMakeLists.txt  package.xml
read_gnss/src/read_gnss/src/: read_gnss.cc
read_gnss/src/src/: read_gnss.cc
remove_dynamic_obstacle/src/remove_dynamic_obstacle/: CMakeLists.txt  package.xml  remove_dynamic_obstacle.cc
test_pointcloud_colormap/src/colormap/: CMakeLists.txt  colormap.cc  labelmap.cc  package.xml
transform_pointcloud/: log
transform_pointcloud/src/transform_pointcloud/: CMakeLists.txt  package.xml
transform_pointcloud/src/transform_pointcloud/src/: transform_pointcloud.cc
